[gd_scene load_steps=20 format=2]

[ext_resource path="res://Art/StatIcons/items_space-sheet1.png" type="Texture" id=1]
[ext_resource path="res://Art/Dispenser/Dispenser_green_anim.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Art/Lights/CircleLight.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Dispenser.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Light.gd" type="Script" id=5]
[ext_resource path="res://Art/pixel_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scripts/UIShake.gd" type="Script" id=7]
[ext_resource path="res://Art/TinyTexture.png" type="Texture" id=8]
[ext_resource path="res://Sound/select.wav" type="AudioStream" id=9]
[ext_resource path="res://Sound/explosion_1.wav" type="AudioStream" id=10]
[ext_resource path="res://Sound/hit_1.wav" type="AudioStream" id=11]
[ext_resource path="res://Sound/dead_1.wav" type="AudioStream" id=12]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Theme" id=2]
default_font = ExtResource( 6 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.755556, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.991516, 0.457031, 1, 0.994207, 0.663705, 0, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )
width = 128

[sub_resource type="Curve" id=5]
bake_resolution = 64
_data = [ Vector2( 0, 1 ), 0.0, -1.10121, 0, 0, Vector2( 1, 0.181818 ), -0.754091, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
width = 64
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
trail_divisor = 10
trail_size_modifier = SubResource( 6 )
trail_color_modifier = SubResource( 4 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 70.0
flatness = 1.0
gravity = Vector3( 0, 200, 0 )
initial_velocity = 110.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 50.0
scale = 0.3
color_ramp = SubResource( 4 )

[node name="Dispenser" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 4 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
frame = 1
playing = true

[node name="IconSprite" type="Sprite" parent="."]
position = Vector2( 0, -3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2( 1, 1.3 )
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, -3 )
texture = ExtResource( 3 )
texture_scale = 0.25
color = Color( 0.290196, 0.635294, 0.133333, 1 )
script = ExtResource( 5 )
effects = 3
flicker_amount = 0.01
pulse_amount = 0.45

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
light_mask = -2147483643
margin_left = -25.0
margin_top = -23.0
margin_right = 25.0
margin_bottom = -13.0
grow_horizontal = 2
rect_pivot_offset = Vector2( 25, 0 )
theme = SubResource( 2 )
text = "25"
align = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
decay = 5.0
max_roll = 0
color_fade_time = 0.3

[node name="Particles2D" type="Particles2D" parent="."]
show_behind_parent = true
light_mask = 2
position = Vector2( 0, -6 )
amount = 60
lifetime = 0.8
speed_scale = 1.2
explosiveness = 0.35
fract_delta = false
process_material = SubResource( 7 )
texture = ExtResource( 8 )

[node name="PurchaseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -6.0
pitch_scale = 0.5

[node name="ErrorSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -3.0
pitch_scale = 0.7

[node name="BashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -6.0
pitch_scale = 1.3

[node name="ExplodeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -6.0
pitch_scale = 0.8
[connection signal="body_entered" from="." to="." method="_on_Node2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Node2D_body_exited"]
